<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TurnLightsOn</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="messages">Messages</string>
    <string name="b1">Stop</string>
    <string name="b2">Start</string>
    <string name="distance">Distance</string>

</resources>
